# eye-in-desk

./: .gitignore  Cargo.toml  build.rs  readme.md
camera/: Cargo.toml  build.rs
camera/examples/: a.rs  client.rs
camera/src/: lib.rs
examples/: a.rs  run.rs
projector/: package-lock.json  package.json
projector/src/: App.vue  style.css
projector/src/ts/: canvas.ts
projector_server/: Cargo.toml  build.rs
projector_server/src/: backend.rs  lib.rs
protos/: aruco.proto  camera.proto  projector.proto  robot.proto  web.proto
robot/: Cargo.toml  build.rs
robot/examples/: read_joints.rs  rpc.rs
robot/src/: lib.rs  main.rs
sim/: package-lock.json  package.json  vite.config.ts
sim/public/ycb/: objects.json
sim/src/: App.vue  style.css
sim/src/ts/: canvas.ts
sim_server/: Cargo.toml  build.rs
sim_server/examples/: run.rs
sim_server/src/: backend.rs  lib.rs
src/: lib.rs
tests/: test.rs
