[package]
name = "eye-in-desk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "robot",
    "camera",
    "projector_server",
    "sim_server",
]

[dependencies]
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
nalgebra = "0.32.2"
anyhow = "1.0.71"
projector_server = { path = "./projector_server" }
sim_server = {path = "./sim_server"}
camera = {path = "./camera"}
robot = {path = "./robot"}
[profile.release]
opt-level = 3
lto = true