[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfranka-rs = "*"
nalgebra = "0.32"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 2
lto = true