[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfranka-rs = "*"
nalgebra = "0.32"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.9"

# [profile.release]
# opt-level = 3
# lto = true